<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    tools:context=".pagesHandler.HomePageHandler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_bar"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/medium_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/button_quit"
                android:foreground="@drawable/icon_return"
                android:background="@color/medium_color"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/page_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/page_title"
                android:fontFamily="@font/main_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/light_color"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:layout_weight="6"
                android:text="@string/main_menu"
                android:maxLines="2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_quit"/>

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="36dp"
            android:paddingVertical="16dp"
            android:layout_height="0dp"
            android:layout_weight="9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/app_name"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:fontFamily="@font/main_font_extra_bold"
                android:textColor="@color/light_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:fontFamily="@font/main_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.7"
                android:text="@string/subtitle"
                android:autoSizeTextType="uniform"
                android:textColor="@color/light_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_quit"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/display_score"
                android:fontFamily="@font/main_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tempString"
                android:autoSizeTextType="uniform"
                android:layout_weight="1"
                android:textColor="@color/light_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <android.widget.Button
                android:id="@+id/button_play"
                android:fontFamily="@font/main_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round"
                android:text="@string/play"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="34sp"
                android:layout_weight="2"
                android:textColor="@color/light_color"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <android.widget.Button
                android:id="@+id/button_tutorial"
                android:fontFamily="@font/main_font"
                android:background="@drawable/btn_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_color"
                android:text="@string/how_to_play"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="24sp"
                android:paddingVertical="16dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/button_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>